tests/ui/imports/import4.stderr
error[E0432]: unresolved import `crate::a::foo`
  --> $DIR/import4.rs:2:17
   |
LL | mod b { pub use crate::a::foo; }
   |                 ^^^^^^^^^^^^^ no `foo` in `a`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0432`.
